updated sidenav items sizing and positioning

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -59,7 +59,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #000;
     z-index: 1037;
     opacity: 0.5;
     transition: opacity 0.3s ease-in-out;
@@ -151,11 +150,6 @@
 
 }
 
-#menu {
-    height: 100vh;
-    overflow-y: auto;
-}
-
 #layoutError {
     display: flex;
     flex-direction: column;
@@ -209,27 +203,32 @@
     flex-direction: column;
     height: 100%;
     flex-wrap: nowrap;
+    justify-content: space-around;
+    background: red;
+    padding: 2px;
 
-    #menu {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 100%;
-        flex-direction: column;
+    .brand-and-menu {
+        height: 86vh;
 
         .side-navbar-brand {
+            height: 20%;
             font-size: 24px;
             color: #20ab95;
             border-bottom: 1px solid gray;
         }
 
-        .menu-inner {
-            width: 97%;
+        #menu {
+            height: 80%;
 
             #role-switcher,
             .navbar-nav {
                 width: 100%;
+            }
 
+            .menu-content {
+                overflow: auto;
+                min-height: 100%;
+                overflow: auto;
             }
 
             .nested-routes {
@@ -239,138 +238,147 @@
                     gap: 0.1rem;
                 }
             }
+
         }
 
     }
 
-}
+    .sidebar-auth {
+        height: 10vh;
+    }
 
-.sb-sidenav .sb-sidenav-menu {
-    flex-grow: 1;
-}
 
-.sb-sidenav .sb-sidenav-menu .nav {
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
+    .sb-sidenav-menu {
+        flex-grow: 1;
+    }
 
-.sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-heading {
-    padding: 1.75rem 1rem 0.75rem;
-    font-size: 0.75rem;
-    font-weight: bold;
-    text-transform: uppercase;
-}
+    .sb-sidenav-menu .nav {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
 
-.sb-sidenav .sb-sidenav-menu .nav .nav-link {
-    display: flex;
-    align-items: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    position: relative;
-}
+    .sb-sidenav-menu .nav .sb-sidenav-menu-heading {
+        padding: 1.75rem 1rem 0.75rem;
+        font-size: 0.75rem;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
 
-.sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-nav-link-icon {
-    font-size: 0.9rem;
-}
+    .sb-sidenav-menu .nav .nav-link {
+        display: flex;
+        align-items: center;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        position: relative;
+    }
 
-.sb-sidenav .sb-sidenav-menu .nav .nav-link .sb-sidenav-collapse-arrow {
-    display: inline-block;
-    margin-left: auto;
-    transition: transform 0.15s ease;
-}
+    .sb-sidenav-menu .nav .nav-link .sb-nav-link-icon {
+        font-size: 0.9rem;
+    }
 
-.sb-sidenav .sb-sidenav-menu .nav .nav-link.collapsed .sb-sidenav-collapse-arrow {
-    transform: rotate(-90deg);
-}
+    .sb-sidenav-menu .nav .nav-link .sb-sidenav-collapse-arrow {
+        display: inline-block;
+        margin-left: auto;
+        transition: transform 0.15s ease;
+    }
 
-.sb-sidenav .sb-sidenav-menu .nav .sb-sidenav-menu-nested {
-    margin-left: 1.1rem;
-    border-left: 1px solid #e6e9ed;
-    flex-direction: column;
-}
+    .sb-sidenav-menu .nav .nav-link.collapsed .sb-sidenav-collapse-arrow {
+        transform: rotate(-90deg);
+    }
 
-.sb-sidenav .sb-sidenav-footer {
-    padding: 0.75rem;
-    flex-shrink: 0;
-}
+    .sb-sidenav-menu .nav .sb-sidenav-menu-nested {
+        margin-left: 1.1rem;
+        border-left: 1px solid #e6e9ed;
+        flex-direction: column;
+    }
 
-.sb-sidenav-dark {
-    background-color: #d9dde9;
-    color: rgba(255, 255, 255, 0.5);
-}
+    .sb-sidenav-footer {
+        padding: 0.75rem;
+        flex-shrink: 0;
+    }
 
-.sb-sidenav-dark .sb-sidenav-menu .sb-sidenav-menu-heading {
-    color: rgba(255, 255, 255, 0.25);
-}
+    /* dark settings */
+    &.sb-sidenav-dark {
+        background-color: #d9dde9;
+        color: rgba(255, 255, 255, 0.5);
 
-.sb-sidenav-dark .sb-sidenav-menu .nav-link {
-    color: rgba(255, 255, 255, 0.5);
-}
+        .sb-sidenav-menu .sb-sidenav-menu-heading {
+            color: rgba(255, 255, 255, 0.25);
+        }
 
-.sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-nav-link-icon {
-    color: rgba(255, 255, 255, 0.25);
-}
+        .sb-sidenav-menu .nav-link {
+            color: rgba(255, 255, 255, 0.5);
+        }
 
-.sb-sidenav-dark .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
-    color: rgba(255, 255, 255, 0.25);
-}
+        .sb-sidenav-menu .nav-link .sb-nav-link-icon {
+            color: rgba(255, 255, 255, 0.25);
+        }
 
-.sb-sidenav-dark .sb-sidenav-menu .nav-link:hover {
-    color: #fff;
-}
+        .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
+            color: rgba(255, 255, 255, 0.25);
+        }
 
-.sb-sidenav-dark .sb-sidenav-menu .nav-link.active {
-    color: #fff;
-}
+        .sb-sidenav-menu .nav-link:hover {
+            color: #fff;
+        }
 
-.sb-sidenav-dark .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
-    color: #fff;
-}
+        .sb-sidenav-menu .nav-link.active {
+            color: #fff;
+        }
 
-.sb-sidenav-dark .sb-sidenav-footer {
-    background-color: #343a40;
-}
+        .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
+            color: #fff;
+        }
 
-.sb-sidenav-light {
-    background-color: rgb(15, 23, 42);
-    color: #d9dde9;
-}
+        .sb-sidenav-footer {
+            background-color: #343a40;
+        }
+    }
 
-.sb-sidenav-light .sb-sidenav-menu .sb-sidenav-menu-heading {
-    color: #adb5bd;
-}
+    /* light settings */
+    &.sb-sidenav-light {
+        background-color: rgb(15, 23, 42);
+        color: #d9dde9;
 
-.sb-sidenav-light .sb-sidenav-menu .nav-link {
-    color: #d9dde9;
-    border-radius: 5px;
-}
+        .sb-sidenav-menu .sb-sidenav-menu-heading {
+            color: #adb5bd;
+        }
 
-.sb-sidenav-light .sb-sidenav-menu .nav-link .sb-nav-link-icon {
-    color: #adb5bd;
-}
+        .sb-sidenav-menu .nav-link {
+            color: #d9dde9;
+            border-radius: 5px;
+        }
 
-.sb-sidenav-light .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
-    color: #adb5bd;
-}
+        .sb-sidenav-menu .nav-link .sb-nav-link-icon {
+            color: #adb5bd;
+        }
 
-.sb-sidenav-light .sb-sidenav-menu .nav-link:hover {
-    color: #f2f3f8;
-    background: #243046;
-}
+        .sb-sidenav-menu .nav-link .sb-sidenav-collapse-arrow {
+            color: #adb5bd;
+        }
 
-.sb-sidenav-light .sb-sidenav-menu .nav-link.active {
-    color: #f2f3f8;
-    background: #243046;
-}
+        .sb-sidenav-menu .nav-link:hover {
+            color: #f2f3f8;
+            background: #243046;
+        }
 
-.sb-sidenav-light .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
-    color: #99b5e0;
-    background: #f4f5f7;
+        .sb-sidenav-menu .nav-link.active {
+            color: #f2f3f8;
+            background: #243046;
+        }
 
-}
+        .sb-sidenav-menu .nav-link.active .sb-nav-link-icon {
+            color: #99b5e0;
+            background: #f4f5f7;
 
-.sb-sidenav-light .sb-sidenav-footer {
-    background-color: #e9ecef;
+        }
+
+        .sb-sidenav-footer {
+            background-color: #e9ecef;
+        }
+
+    }
+
 }
 
 /* end aside nav */
