--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -10,8 +10,8 @@
     padding: 3px;
 
     img {
-        height: 100%;
-        width: 100%;
+        height: 110px;
+        width: 110px;
         border-radius: 50%;
     }
 
