--- a/src/styles/userprofile.scss
+++ b/src/styles/userprofile.scss
@@ -52,7 +52,6 @@
     font-weight: 600;
     text-transform: uppercase;
     border-radius: 50%;
-    border: 4px solid rgba(255, 255, 255, .3);
     overflow: hidden;
     margin: 0 auto;
     -webkit-transition: all 300ms linear;
@@ -71,8 +70,6 @@
     right: -15px;
     top: 0;
     width: 1px;
-    background-color: #ddd;
-    card-body: "";
     position: absolute
 }
 
@@ -88,18 +85,17 @@
 .card-user .author {
     text-align: center;
     text-transform: none;
-    margin-top: -70px
+    margin-top: -100px
 }
 
-.card-user .avatar {
+.card-user .author-image {
     width: 124px;
     height: 124px;
-    border: 5px solid #eee;
     position: relative;
     margin-bottom: 15px
 }
 
-.card-user .avatar.border-gray {
+.card-user .author-image.border-gray {
     border-color: #eee
 }
 
@@ -147,8 +143,8 @@
         cursor: pointer;
     }
 
-    &:hover .profile-pic {
-        opacity: .5;
+    &:hover .upload-button .arrow-circle-up {
+        opacity: .9;
     }
 
     .profile-pic {
@@ -171,12 +167,14 @@
         }
     }
 
+
     .upload-button {
         height: 100%;
         width: 100%;
 
         .arrow-circle-up {
-            font-size: 234px;
+            font-size: 50px;
+            line-height: 0;
             top: -17px;
             left: 0;
             text-align: center;
@@ -185,9 +183,6 @@
             color: #34495e;
         }
 
-        &:hover .arrow-circle-up {
-            opacity: .9;
-        }
     }
 }
 
